--- a/notebooks/incubation/matterport-mask-rcnn/train_shapes.ipynb
+++ b/notebooks/incubation/matterport-mask-rcnn/train_shapes.ipynb
@@ -46,7 +46,6 @@
     "if [  -d \"/content/nhd-colab\" ]\n",
     "then\n",
     "   echo \"Environment already initialized\"\n",
-    "\n",
     "elif [ -d \"/content\" ] && [ ! -d \"/content/nhd-colab\" ]\n",
     "then\n",
     "    cd /content || exit 1;\n",
@@ -58,8 +57,8 @@
     "    cd `git rev-parse --show-toplevel` || exit 1;\n",
     "fi\n",
     "pwd\n",
-    "pip install utils/colab_install/ > /dev/null 2>&1 || exit 1;\n",
-    "colab > /dev/null 2>&1 || exit 1;\n",
+    "pip install utils/nhdcolab > /dev/null 2>&1 || exit 1;\n",
+    "nhdcolab > /dev/null 2>&1 || exit 1;\n",
     "echo \"Great Success!\""
    ]
   },
@@ -83,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "!colab init mp-mask-rcnn --no-patch"
+    "!nhdcolab init mp-mask-rcnn --no-patch"
    ]
   },
   {
@@ -732,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
