--- a/notebooks/incubation/yolov4/discovery.ipynb
+++ b/notebooks/incubation/yolov4/discovery.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,15 +26,13 @@
      "output_type": "stream",
      "text": [
       "Not running in Colab - going to root of repos\n",
-      "Installing colab installer (which will run in the next cell)\n",
-      "Checkin that Colab is available\n",
+      "/Users/lpbrac/gitlab/pyops/nhd/nhd-colab\n",
       "Great Success!\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "# This is some boiler plate code that clones the repository on Colab\n",
     "if [  -d \"/content/nhd-colab\" ]\n",
     "then\n",
     "   echo \"Environment already initialized\"\n",
@@ -48,65 +46,44 @@
     "    echo \"Not running in Colab - going to root of repos\"\n",
     "    cd `git rev-parse --show-toplevel` || exit 1;\n",
     "fi\n",
-    "echo \"Installing colab installer (which will run in the next cell)\"\n",
-    "pip install utils/colab_install/ > /dev/null 2>&1 || exit 1;\n",
-    "echo \"Checkin that Colab is available\"\n",
-    "colab > /dev/null 2>&1 || exit 1;\n",
+    "pwd\n",
+    "pip install utils/nhdcolab > /dev/null 2>&1 || exit 1;\n",
+    "nhdcolab > /dev/null 2>&1 || exit 1;\n",
     "echo \"Great Success!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running TensorFlow Version 2.1.0\u001b[0m\n",
+      "\u001b[32mNHD_COLAB_REPOS_ROOT=/Users/lpbrac/gitlab/pyops/nhd/nhd-colab OK!\u001b[0m\n",
+      "\u001b[33mGoogle Drive not mounted\u001b[0m\n",
       "\u001b[33mgoing to repos root dir /Users/lpbrac/gitlab/pyops/nhd/nhd-colab\u001b[0m\n",
       "loading install config /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/install.yml\u001b[0m\n",
       "\u001b[36minstalling components\u001b[0m\n",
-      "\u001b[32myolov4-tf already installed - skipping\u001b[0m\n"
+      "\u001b[36minstalling component yolov4-tf\u001b[0m\n",
+      "\u001b[36m\u001b[1m[running]\u001b[0mpip3 install install -r yolov4/tensorflow/requirements.txt\u001b[0m\u001b[32m OK!\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "# This line instal the yolov4-tf components \n",
-    "! colab init yolov4-tf\n"
+    "! nhdcolab init yolov4-tf\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding root of git repository\n",
-      "NHD_COLAB_REPOS_ROOT=/Users/lpbrac/gitlab/pyops/nhd/nhd-colab\n",
-      "OK!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# This cell goes to the repository root of nhd-colab and sets the NHD_COLAB_REPOS_ROOT variable.\n",
-    "import os\n",
-    "import pathlib\n",
-    "import subprocess\n",
-    "if os.getcwd() == '/content':\n",
-    "  print(\"Running in Colab\")\n",
-    "  NHD_COLAB_REPOS_ROOT = pathlib.Path(os.getcwd()) / 'nhd-colab'\n",
-    "else:\n",
-    "  print(\"Finding root of git repository\")\n",
-    "  NHD_COLAB_REPOS_ROOT = pathlib.Path(subprocess.check_output('git rev-parse --show-toplevel', shell=True).decode('utf-8').strip())\n",
-    "os.chdir(NHD_COLAB_REPOS_ROOT)\n",
-    "assert os.getcwd() == str(NHD_COLAB_REPOS_ROOT.cwd())\n",
-    "assert os.getcwd().endswith('/nhd-colab')\n",
-    "print(f\"NHD_COLAB_REPOS_ROOT={NHD_COLAB_REPOS_ROOT}\\nOK!\")"
+    "from nhdcolab.environment import NHDEnvironment\n",
+    "NHD_ENV = NHDEnvironment(gdrive_mount=True)"
    ]
   },
   {
@@ -133,36 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Google drive not mounted since not running in Colab\n",
-      "YOLOV4_COCO_WEIGHTS='/Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4.weights\n",
-      "converting /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4.weights to  /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4-fp16.tflite \n",
-      ">> running command python3 convert_tflite.py  --weights '/Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4.weights' --output '/Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4-fp16.tflite' --quantize_mode float16 --dataset /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/coco_dataset/coco/val207.txt\n",
-      "OK!\n",
-      "converting /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4.weights to  /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4-int8.tflite \n",
-      ">> running command python3 convert_tflite.py  --weights '/Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4.weights' --output '/Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4-int8.tflite' --quantize_mode full_int8 --dataset /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/coco_dataset/coco/val207.txt\n"
-     ]
-    },
-    {
-     "ename": "OSError",
-     "evalue": "command python3 convert_tflite.py  --weights '/Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4.weights' --output '/Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4-int8.tflite' --quantize_mode full_int8 --dataset /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/coco_dataset/coco/val207.txt failed\b 2020-06-17 19:22:26.752787: I tensorflow/core/platform/cpu_feature_guard.cc:143] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n2020-06-17 19:22:26.771281: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7fd218084540 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n2020-06-17 19:22:26.771294: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n2020-06-17 19:22:33.818432: I tensorflow/core/grappler/devices.cc:60] Number of eligible GPUs (core count >= 8, compute capability >= 0.0): 0 (Note: TensorFlow was not compiled with CUDA support)\n2020-06-17 19:22:33.818498: I tensorflow/core/grappler/clusters/single_machine.cc:356] Starting new session\n2020-06-17 19:22:33.854343: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:797] Optimization results for grappler item: graph_to_optimize\n2020-06-17 19:22:33.854365: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:799]   function_optimizer: function_optimizer did nothing. time = 0.002ms.\n2020-06-17 19:22:33.854369: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:799]   function_optimizer: function_optimizer did nothing. time = 0ms.\n2020-06-17 19:22:42.446288: I tensorflow/core/grappler/devices.cc:60] Number of eligible GPUs (core count >= 8, compute capability >= 0.0): 0 (Note: TensorFlow was not compiled with CUDA support)\n2020-06-17 19:22:42.450075: I tensorflow/core/grappler/clusters/single_machine.cc:356] Starting new session\n2020-06-17 19:22:48.970341: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:797] Optimization results for grappler item: graph_to_optimize\n2020-06-17 19:22:48.972510: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:799]   constant_folding: Graph size after: 1356 nodes (-862), 1477 edges (-755), time = 2945.21606ms.\n2020-06-17 19:22:48.972516: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:799]   constant_folding: Graph size after: 1356 nodes (0), 1477 edges (0), time = 464.737ms.\nW0617 19:22:51.165082 4628415936 lite.py:504] Please consider switching to use new converter by setting experimental_new_converter to true. Old converter (TOCO) is deprecated and flow will be switched on by default to use new converter soon.\nTraceback (most recent call last):\n  File \"convert_tflite.py\", line 111, in <module>\n    app.run(main)\n  File \"/usr/local/var/pyenv/versions/nhd-colab-3.6.9/lib/python3.7/site-packages/absl/app.py\", line 299, in run\n    _run_main(main, args)\n  File \"/usr/local/var/pyenv/versions/nhd-colab-3.6.9/lib/python3.7/site-packages/absl/app.py\", line 250, in _run_main\n    sys.exit(main(argv))\n  File \"convert_tflite.py\", line 106, in main\n    save_tflite()\n  File \"convert_tflite.py\", line 80, in save_tflite\n    tflite_model = converter.convert()\n  File \"/usr/local/var/pyenv/versions/nhd-colab-3.6.9/lib/python3.7/site-packages/tensorflow/lite/python/lite.py\", line 522, in convert\n    result, constants.FLOAT, constants.FLOAT)\n  File \"/usr/local/var/pyenv/versions/nhd-colab-3.6.9/lib/python3.7/site-packages/tensorflow/lite/python/lite.py\", line 267, in _calibrate_quantize_model\n    inference_output_type, allow_float, self._experimental_new_quantizer)\n  File \"/usr/local/var/pyenv/versions/nhd-colab-3.6.9/lib/python3.7/site-packages/tensorflow/lite/python/optimize/calibrator.py\", line 76, in calibrate_and_quantize\n    for calibration_sample in dataset_gen():\n  File \"convert_tflite.py\", line 20, in representative_data_gen\n    fimage = open(FLAGS.dataset).read().split()\nFileNotFoundError: [Errno 2] No such file or directory: '/Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/coco_dataset/coco/val207.txt'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-51-cfc375a1634e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mYOLOV4_COCO_TFLITE_UINT8_WEIGHTS\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m         \u001b[0mconvert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mYOLOV4_COCO_TFLITE_UINT8_WEIGHTS\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquant_mode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'--quantize_mode full_int8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mYOLOV4_COCO_TFLITE_UINT8_WEIGHTS\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{output} not found\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-51-cfc375a1634e>\u001b[0m in \u001b[0;36mconvert\u001b[0;34m(output, quant_mode)\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0mcmd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"python3 {YOLOV4_CONVERT_TFLITE_SCRIPT} --weights '{YOLOV4_COCO_WEIGHTS}' --output '{output}' {quant_mode} --dataset {COCO_DATA_SET_VAL}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"converting {YOLOV4_COCO_WEIGHTS} to  {output} \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m     \u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{output} not found\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"OK!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-51-cfc375a1634e>\u001b[0m in \u001b[0;36mrun\u001b[0;34m(cmd)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPIPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshell\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreturncode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mOSError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"command {cmd} failed\\b {result.stderr.decode('utf-8')}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mYOLOV4_SUB_MOD_ROOT\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{YOLOV4_SUB_MOD_ROOT} not found\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOSError\u001b[0m: command python3 convert_tflite.py  --weights '/Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4.weights' --output '/Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/data/yolov4-int8.tflite' --quantize_mode full_int8 --dataset /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/coco_dataset/coco/val207.txt failed\b 2020-06-17 19:22:26.752787: I tensorflow/core/platform/cpu_feature_guard.cc:143] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n2020-06-17 19:22:26.771281: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7fd218084540 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n2020-06-17 19:22:26.771294: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n2020-06-17 19:22:33.818432: I tensorflow/core/grappler/devices.cc:60] Number of eligible GPUs (core count >= 8, compute capability >= 0.0): 0 (Note: TensorFlow was not compiled with CUDA support)\n2020-06-17 19:22:33.818498: I tensorflow/core/grappler/clusters/single_machine.cc:356] Starting new session\n2020-06-17 19:22:33.854343: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:797] Optimization results for grappler item: graph_to_optimize\n2020-06-17 19:22:33.854365: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:799]   function_optimizer: function_optimizer did nothing. time = 0.002ms.\n2020-06-17 19:22:33.854369: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:799]   function_optimizer: function_optimizer did nothing. time = 0ms.\n2020-06-17 19:22:42.446288: I tensorflow/core/grappler/devices.cc:60] Number of eligible GPUs (core count >= 8, compute capability >= 0.0): 0 (Note: TensorFlow was not compiled with CUDA support)\n2020-06-17 19:22:42.450075: I tensorflow/core/grappler/clusters/single_machine.cc:356] Starting new session\n2020-06-17 19:22:48.970341: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:797] Optimization results for grappler item: graph_to_optimize\n2020-06-17 19:22:48.972510: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:799]   constant_folding: Graph size after: 1356 nodes (-862), 1477 edges (-755), time = 2945.21606ms.\n2020-06-17 19:22:48.972516: I tensorflow/core/grappler/optimizers/meta_optimizer.cc:799]   constant_folding: Graph size after: 1356 nodes (0), 1477 edges (0), time = 464.737ms.\nW0617 19:22:51.165082 4628415936 lite.py:504] Please consider switching to use new converter by setting experimental_new_converter to true. Old converter (TOCO) is deprecated and flow will be switched on by default to use new converter soon.\nTraceback (most recent call last):\n  File \"convert_tflite.py\", line 111, in <module>\n    app.run(main)\n  File \"/usr/local/var/pyenv/versions/nhd-colab-3.6.9/lib/python3.7/site-packages/absl/app.py\", line 299, in run\n    _run_main(main, args)\n  File \"/usr/local/var/pyenv/versions/nhd-colab-3.6.9/lib/python3.7/site-packages/absl/app.py\", line 250, in _run_main\n    sys.exit(main(argv))\n  File \"convert_tflite.py\", line 106, in main\n    save_tflite()\n  File \"convert_tflite.py\", line 80, in save_tflite\n    tflite_model = converter.convert()\n  File \"/usr/local/var/pyenv/versions/nhd-colab-3.6.9/lib/python3.7/site-packages/tensorflow/lite/python/lite.py\", line 522, in convert\n    result, constants.FLOAT, constants.FLOAT)\n  File \"/usr/local/var/pyenv/versions/nhd-colab-3.6.9/lib/python3.7/site-packages/tensorflow/lite/python/lite.py\", line 267, in _calibrate_quantize_model\n    inference_output_type, allow_float, self._experimental_new_quantizer)\n  File \"/usr/local/var/pyenv/versions/nhd-colab-3.6.9/lib/python3.7/site-packages/tensorflow/lite/python/optimize/calibrator.py\", line 76, in calibrate_and_quantize\n    for calibration_sample in dataset_gen():\n  File \"convert_tflite.py\", line 20, in representative_data_gen\n    fimage = open(FLAGS.dataset).read().split()\nFileNotFoundError: [Errno 2] No such file or directory: '/Users/lpbrac/gitlab/pyops/nhd/nhd-colab/yolov4/tensorflow/coco_dataset/coco/val207.txt'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" When running on Colab, this cell attempt to mount the Google drive \n",
     "    to access the weights located at /content/drive/My Drive/yolov4\n",
@@ -180,18 +130,10 @@
     "import pathlib\n",
     "import subprocess\n",
     "\n",
-    "YOLOV4_SUB_MOD_ROOT = NHD_COLAB_REPOS_ROOT / 'yolov4' / 'tensorflow'\n",
+    "YOLOV4_SUB_MOD_ROOT = NHD_ENV.NHD_COLAB_REPOS_ROOT / 'yolov4' / 'tensorflow'\n",
     "YOLOV4_CONVERT_TFLITE_SCRIPT = 'convert_tflite.py '\n",
-    "YOLOV4_WEIGHTS_DIR = pathlib.Path(\"/content/drive/My Drive/yolov4\")\n",
+    "YOLOV4_WEIGHTS_DIR = NHD_ENV.NHD_COLAB_DRIVE / 'models', 'yolov4\"\n",
     "COCO_DATA_SET_VAL = YOLOV4_SUB_MOD_ROOT / 'data' / 'dataset' / 'val2017.txt'\n",
-    " \n",
-    "assert YOLOV4_SUB_MOD_ROOT.is_dir(), f\"{YOLOV4_SUB_MOD_ROOT} not found\"\n",
-    "try:\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/drive/')\n",
-    "except ModuleNotFoundError:\n",
-    "    print(\"Google drive not mounted since not running in Colab\")\n",
-    "    YOLOV4_WEIGHTS_DIR = pathlib.Path(os.environ.get('YOLOV4_WEIGHTS_DIR', YOLOV4_SUB_MOD_ROOT / 'data'))\n",
     "\n",
     "YOLOV4_COCO_TFLITE_WEIGHTS = YOLOV4_WEIGHTS_DIR / 'yolov4.tflite'\n",
     "YOLOV4_COCO_TFLITE_FP16_WEIGHTS = YOLOV4_WEIGHTS_DIR / 'yolov4-fp16.tflite'\n",
@@ -264,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
