--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -91,8 +91,7 @@
    "source": [
     "# Loading the Environment\n",
     "\n",
-    "this piece of code set the current working directory at the root of the nhd-colab repos. \n",
-    "It also sets the **NHD_COLAB_REPOS_ROOT** to that location (type pathlib.Path()).\n"
+    "This piece of code loads the NHD environment into your notebook. From that object, you can access various environment variables. \n"
    ]
   },
   {
