--- a/notebooks/inference/mask-rcnn.ipynb
+++ b/notebooks/inference/mask-rcnn.ipynb
@@ -37,8 +37,8 @@
     "    cd `git rev-parse --show-toplevel` || exit 1;\n",
     "fi\n",
     "pwd\n",
-    "pip install utils/colab_install/ > /dev/null 2>&1 || exit 1;\n",
-    "colab > /dev/null 2>&1 || exit 1;\n",
+    "pip install utils/nhdcolab/ > /dev/null 2>&1 || exit 1;\n",
+    "nhdcolab > /dev/null 2>&1 || exit 1;\n",
     "echo \"Great Success!\""
    ]
   },
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!colab init mp-mask-rcnn"
+    "!nhdcolab init mp-mask-rcnn"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Root directory of the project with respect to the /content directory in the colab container.\n",
-    "ROOT_DIR = os.path.join(NHD_COLAB_REPOS_ROOT, \"mask-rcnn\", \"matterport\")\n",
+    "ROOT_DIR = os.path.join(NHD_ENV.NHD_COLAB_REPOS_ROOT, \"mask-rcnn\", \"matterport\")\n",
     "\n",
     "# Import Mask RCNN\n",
     "sys.path.append(ROOT_DIR)  # To find local version of the library\n",
