more fine tuning

--- a/notebooks/incubation/yolov4/discovery.ipynb
+++ b/notebooks/incubation/yolov4/discovery.ipynb
@@ -132,7 +132,7 @@
     "\n",
     "YOLOV4_SUB_MOD_ROOT = NHD_ENV.NHD_COLAB_REPOS_ROOT / 'yolov4' / 'tensorflow'\n",
     "YOLOV4_CONVERT_TFLITE_SCRIPT = 'convert_tflite.py '\n",
-    "YOLOV4_WEIGHTS_DIR = NHD_ENV.NHD_COLAB_DRIVE / 'models', 'yolov4\"\n",
+    "YOLOV4_WEIGHTS_DIR = NHD_ENV.NHD_COLAB_DRIVE / 'models'/ 'yolov4'\n",
     "COCO_DATA_SET_VAL = YOLOV4_SUB_MOD_ROOT / 'data' / 'dataset' / 'val2017.txt'\n",
     "\n",
     "YOLOV4_COCO_TFLITE_WEIGHTS = YOLOV4_WEIGHTS_DIR / 'yolov4.tflite'\n",
@@ -187,7 +187,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"The End\")"
+   ]
   }
  ],
  "metadata": {
