--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -91,7 +91,14 @@
    "source": [
     "# Loading the Environment\n",
     "\n",
-    "This piece of code loads the NHD environment into your notebook. From that object, you can access various environment variables. \n"
+    "This piece of code loads the NHD environment into your notebook. From that object, you can access various environment variables. \n",
+    "\n",
+    "If running in Colab, and if _gdrive_mount_ is True, the google drive will be mounted. On your workstation, \n",
+    "it will look at _NHD_ENV.NHD_COLAB_REPOS_ROOT / 'drive' / 'nhddrive'_. \n",
+    "\n",
+    "You can however override this by setting the _NHD_COLAB_DRIVE_ environment variable to the data location. \n",
+    "\n",
+    "For instance, say your Box storage is under ~/Box/NHD/nhddrive, you can set _NHD_COLAB_DRIVE_ to that location.\n"
    ]
   },
   {
