remove --force option

--- a/notebooks/incubation/yolov4/inference.ipynb
+++ b/notebooks/incubation/yolov4/inference.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!nhdcolab init yolov4-tf --force"
+    "!nhdcolab init yolov4-tf"
    ]
   },
   {
