fixed the display size and division error

--- a/notebooks/incubation/yolov4/inference.ipynb
+++ b/notebooks/incubation/yolov4/inference.ipynb
@@ -229,10 +229,10 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "plt.figure(figsize=(150,150))\n",
-    "columns = 1\n",
+    "plt.figure(figsize=(30,200))\n",
+    "columns = 2\n",
     "for i, frame in enumerate(FRAMES):\n",
-    "    plt.subplot(len(FRAMES) / columns + 1, columns, i + 1)\n",
+    "    plt.subplot(len(FRAMES) // columns + 1, columns, i + 1)\n",
     "    plt.imshow(frame.original)"
    ]
   },
